--- a/Ninesky.Core/Ninesky.Core.csproj
+++ b/Ninesky.Core/Ninesky.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="General\Security.cs" />
     <Compile Include="NineskyContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Role.cs" />
     <Compile Include="Types\Paging.cs" />
     <Compile Include="Types\Response.cs" />
   </ItemGroup>
